# Simplifine

./: .gitignore  README.md  README.md.orig  analysis.py  annotaion.py  api_keys.json  aws_utils.py  clfAnot.jsonl  clfAnot_v2.jsonl  eval.py  example_sum_eval.py  example_sum_eval_batch.py  log.json  logger.py  pdb_log.json  pipeline.py  pipeline_example_01.py  prompt_repo.json  pyproject.toml  requirements.txt  server_funcs.py  server_host.py  setup.py  sumAnot.jsonl  test.jsonl  train_engine.py  utils.py
.github/workflows/: publish-to-test-pypi.yml  python-build.yml  python-publish.yml
examples/: Copy_of_fake_url_detection.ipynb  clm_meas_example.py  cloud_quickstart.ipynb  cont_emb_ft.py  fake_url_detection.ipynb  readme.md  sft_quick_start.ipynb
examples/SFT_finetune/: readme.md  sft_ft.py
examples/SFT_finetune_cloud/: readme.md  sft_ft_cloud.py  sft_ft_cloud_llama3.ipynb
simplifine_alpha/: annotation.py  eval.py  inference_tools.py  logger.py  synth_gen.py  train_engine.py  train_engine_client.py  train_utils.py  url_class.py  utils.py
simplifine_alpha/batch_requests/: 50cb5386-e318-4ada-85d6-76ea020d5cca.jsonl  batch_KbPuUa4PVWqvkDF8PfRWIaNI_input.json  logger.jsonl
simplifine_alpha/tests/: test.py
simplifine_alpha/zero/: zero_stg2_offload.json
tests/: test.py
